@startuml

title __BUILDINGS's Class Diagram__\n

  namespace NHF {
    namespace Buildings {
      class NHF.Buildings.Factories {
          {static} - factories : ArrayList<Factory>
          {static} + addFactory()
          {static} + getFactories()
          {static} + getFactoryByName()
          {static} + loadFactories()
          {static} + removeFactory()
          {static} + saveFactories()
      }
    }
  }
  

  namespace NHF {
    namespace Buildings {
      class NHF.Buildings.Factory {
          - machines : ArrayList<Machine>
          - name : String
          - storage : ArrayList<StorageElement>
          + Factory()
          + addMachine()
          + addStorageElement()
          + getMachineByName()
          + getMachines()
          + getName()
          + getStorage()
          + getStorageElementByName()
          + setName()
      }
    }
  }
  

  namespace NHF {
    namespace Buildings {
      class NHF.Buildings.Machine {
          - name : String
          - productionTime : double
          - setUpTime : double
          + Machine()
          + getLocation()
          + getName()
          + getOutputProduct()
          + getProductionTime()
          + getSetUpTime()
          + setName()
          + setOutputProduct()
          + setProductionTime()
          + setSetUpTime()
      }
    }
  }
  

  namespace NHF {
    namespace Buildings {
      class NHF.Buildings.Machines {
          {static} - machines : ArrayList<Machine>
          {static} + addMachine()
          {static} + getMachineByName()
          {static} + loadMachines()
          {static} + saveMachines()
      }
    }
  }
  

  NHF.Buildings.Factory .up.|> java.io.Serializable
  NHF.Buildings.Factory -up-|> NHF.Buildings.Factories
  NHF.Buildings.Machine .up.|> java.io.Serializable
  NHF.Buildings.Machine o-- NHF.Buildings.Factory : location
  NHF.Buildings.Machine o-- NHF.Items.Item : outputProduct


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
